--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -759,6 +759,9 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   z-index: 1;
   background-color: var(--color-dark);
   font-size: var(--h5);
