--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -128,6 +128,7 @@ main {
 footer {
   display: flex;
   align-items: center;
+  justify-content: center;
   z-index: 1;
 
   background-color: var(--color-dark); 
